--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "anton-miloradov",
   "description": "Anton Miloradov",
   "version": "1.0.0",
-  "author": "Anton Miloradov <tonineo@gmail.com>",
+  "author": "Anton Miloradov <anton.miloradov@gmail.com>",
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby-starter-blog/issues"
   },
