--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "author": "Anton Miloradov <anton.miloradov@gmail.com>",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby-starter-blog/issues"
+    "url": "https://github.com/antonmiloradov/antonmiloradov.github.io/issues/new"
   },
   "dependencies": {
     "gatsby": "^1.9.118",
