--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "1.0.0",
   "author": "Anton Miloradov <anton.miloradov@gmail.com>",
   "bugs": {
-    "url":
-      "https://github.com/antonmiloradov/antonmiloradov.github.io/issues/new"
+    "url": "https://github.com/antonmiloradov/antonmiloradov.github.io/issues/new"
   },
   "dependencies": {
     "gatsby": "^1.9.118",
@@ -43,7 +42,9 @@
     "prettier": "^1.8.2"
   },
   "homepage": "https://antonmiloradov.github.io/",
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "main": "n/a",
   "repository": {
@@ -52,18 +53,14 @@
   },
   "scripts": {
     "dev": "gatsby develop",
-    "lint":
-      "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
+    "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format":
-      "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'",
     "develop": "gatsby develop",
     "build": "gatsby build",
     "copy-circleci": "cp -r .circleci public/.circleci",
     "generate-files": "./generate-files.sh",
-    "deploy":
-      "gatsby build --prefix-paths && npm run copy-circleci && gh-pages -d public --branch master",
-    "fix-semi":
-      "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js"
+    "deploy": "gatsby build --prefix-paths && npm run copy-circleci && gh-pages -d public --branch master",
+    "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js"
   }
 }
